openshift/deploymentconfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: gremlins
  namespace: devops
  labels:
    app: gremlins
    app.kubernetes.io/component: gremlins
    app.kubernetes.io/instance: gremlins
    app.kubernetes.io/name: gremlins
    app.kubernetes.io/part-of: gremlins-app
    app.openshift.io/runtime: gremlins
    app.openshift.io/runtime-namespace: devops
    app.openshift.io/runtime-version: latest
spec:
  strategy:
    type: Rolling
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - gremlins
        from:
          kind: ImageStreamTag
          namespace: devops
          name: 'gremlins:latest'
    - type: ConfigChange
  replicas: 1
  selector:
    app: gremlins
    deploymentconfig: gremlins
  template:
    metadata:
      labels:
        app: gremlins
        deploymentconfig: gremlins
    spec:
      containers:
        - name: gremlins
          image: >-
            image-registry.openshift-image-registry.svc:5000/devops/gremlins:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
