openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gremlins
  namespace: devops
  labels:
    app: gremlins
    app.kubernetes.io/component: gremlins
    app.kubernetes.io/instance: gremlins
    app.kubernetes.io/name: gremlins
    app.kubernetes.io/part-of: gremlins-app
spec:
  to:
    kind: Service
    name: gremlins
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
